WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 42067
The mathsize MathML attribute doesn't handle values in em, px, pt,...
https://bugs.webkit.org/show_bug.cgi?id=42067
Summary
The mathsize MathML attribute doesn't handle values in em, px, pt,...
François Sausset
Reported
2010-07-12 02:54:43 PDT
The mathsize MathML attribute implementation handles only "normal", "small", and "big" values, but not regular CSS lengths.
Attachments
Patch
(46.63 KB, patch)
2010-07-12 03:03 PDT
,
François Sausset
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
François Sausset
Comment 1
2010-07-12 03:03:26 PDT
Created
attachment 61202
[details]
Patch Full implementation of the mathsize attribute that should respect the MathML 3 recommendation.
Kenneth Rohde Christiansen
Comment 2
2010-07-12 05:31:53 PDT
Comment on
attachment 61202
[details]
Patch LGTM, sad that it makes the ChangeLog so ugly though.
François Sausset
Comment 3
2010-07-12 05:34:27 PDT
(In reply to
comment #2
)
> (From update of
attachment 61202
[details]
) > LGTM, sad that it makes the ChangeLog so ugly though.
I agree, but I let the ChangeLog like it was to respect the submission rules.
WebKit Commit Bot
Comment 4
2010-07-12 06:21:01 PDT
Comment on
attachment 61202
[details]
Patch Clearing flags on attachment: 61202 Committed
r63079
: <
http://trac.webkit.org/changeset/63079
>
WebKit Commit Bot
Comment 5
2010-07-12 06:21:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug