2010-07-12  François Sausset  <sausset@gmail.com>

Reviewed by Kenneth Rohde Christiansen.

        Test the mathsize MathML attribute.
        https://bugs.webkit.org/show_bug.cgi?id=42067

        * mathml/presentation/attributes.xhtml:
        * platform/mac/mathml/presentation/attributes-expected.checksum:
        * platform/mac/mathml/presentation/attributes-expected.png:
        * platform/mac/mathml/presentation/attributes-expected.txt:
2010-07-12  François Sausset  <sausset@gmail.com>

        Reviewed by Kenneth Rohde Christiansen.

        Make the mathsize MathML attribute handle values in em, px, pt,...
        https://bugs.webkit.org/show_bug.cgi?id=42067

        Test: mathml/presentation/attributes.xhtml

        * css/mathml.css:
        (math[mathsize="small"], mstyle[mathsize="small"], mo[mathsize="small"], mn[mathsize="small"], mi[mathsize="small"], mtext[mathsize="small"], mspace[mathsize="small"], ms[mathsize="small"]):
        (math[mathsize="normal"], mstyle[mathsize="normal"], mo[mathsize="normal"], mn[mathsize="normal"], mi[mathsize="normal"], mtext[mathsize="normal"], mspace[mathsize="normal"], ms[mathsize="normal"]):
        (math[mathsize="big"], mstyle[mathsize="big"], mo[mathsize="big"], mn[mathsize="big"], mi[mathsize="big"], mtext[mathsize="big"], mspace[mathsize="big"], ms[mathsize="big"]):
        * mathml/MathMLElement.cpp:
        (WebCore::MathMLElement::parseMappedAttribute):

Canonical link: https://commits.webkit.org/53947@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63079 268f45cc-cd09-0410-ab3c-d52691b4dbfc